Changes file for Log::Any::Adapter::JSON

{{$NEXT}}

1.09      2021-05-01 10:19:44-04:00 America/New_York

  - Allow disabling message string formatting
    Thanks Dan Michael O. Heggø!

  - Allow choosing to timestamp the log message in localtime

  - Extend timestamp to microseconds and include TZ

1.08      2021-03-04 18:21:40-05:00 America/New_York

  - Update prereqs (strictures is v 2)

1.07      2021-03-04 06:31:39-05:00 America/New_York

  - Skip pipe test on MSWin32

1.06      2021-03-03 20:31:39-05:00 America/New_York

  - Update doc

1.05      2021-03-03 20:27:31-05:00 America/New_York

  - Update doc

1.04      2021-03-03 20:17:22-05:00 America/New_York

  - Update README

1.03      2021-03-03 20:15:46-05:00 America/New_York

  - Documentation updates

1.02      2021-03-03 19:29:29-05:00 America/New_York

  - Fix typo in prereqs

1.01      2021-03-03 19:23:57-05:00 America/New_York

  - Add support for Log::Any's context hash

1.00      2021-03-03 18:38:00-05:00 America/New_York

  - First version, released on an unsuspecting world